fix some sonarqube alerts